# virtuoso-bridge-lite

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/skills/: optimizer  spectre
arxiv/: virtuoso_bridge_ieee.tex
arxiv/tables/: comparison.tex
core/: ramic_daemon.py
docs/: index.html  test-environment-record.md
examples/: _timing.py
examples/01_virtuoso/ade/: 01_list_design_vars.py  01_rc_filter_sweep.py  02_get_set_var.py  03_run_simulation.py
examples/01_virtuoso/assets/: ade_bridge.il  harvest_library.il  maestro_utils.il  sonnet18.il
examples/01_virtuoso/basic/: 02_ciw_print.py  03_load_il.py  04_list_library_cells.py  05_harvest_library.py  05_multiline_skill.py  06_screenshot.py
examples/01_virtuoso/layout/: 01_create_layout.py  02_add_polygon.py  03_add_via.py  04_multilayer_routing.py  05_bus_routing.py  06_read_layout.py  07_delete_shapes_on_layer.py  08_clear_routing.py  09_clear_current_layout.py  10_delete_cell.py  flower.py
examples/01_virtuoso/maestro/: .gitignore  01_read_focused_maestro.py  02_gui_open_read_close_maestro.py  02_read_open_maestro.py  03_bg_open_read_close_maestro.py  03_open_read_close_maestro.py  04_gui_open_read_close_maestro.py  06_rc_filter_sweep.py  06a_rc_create.py  06b_rc_simulate.py  06b_rc_simulate_and_read.py  07_gui_session_lifecycle.py  08_gui_open_snapshot_close.py  09_snapshot_with_metrics.py
examples/01_virtuoso/schematic/: 01a_create_rc_stepwise.py  (+4 more)
skills/optimizer/: SKILL.md
skills/spectre/: SKILL.md
skills/virtuoso/: SKILL.md
src/virtuoso_bridge/: __init__.py  cli.py  models.py
(+54 files in other folders)
